--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,8 @@ pyvenv.cfg
 pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,venv
+
+### Google ###
+GEMINI.md
+
+### End of .gitignore ###
