--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.18.0
 annotated-types==0.7.0
 anyio==4.8.0
 async-timeout==5.0.1
@@ -18,17 +19,22 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.3.0
 Jinja2==3.1.5
+Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==25.0
 passlib==1.7.4
+pluggy==1.6.0
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+pytest==9.0.2
 python-dotenv==1.0.1
 python-jose==3.4.0
 python-multipart==0.0.20
@@ -43,6 +49,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.38
 sqlmodel==0.0.22
 starlette==0.45.3
+tomli==2.4.0
 typer==0.15.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
