--- a/requirements.txt
+++ b/requirements.txt
@@ -21,12 +21,16 @@ httpx==0.28.1
 idna==3.10
 iniconfig==2.3.0
 Jinja2==3.1.5
+librt==0.7.7
 Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mypy==1.19.1
+mypy_extensions==1.1.0
 packaging==25.0
 passlib==1.7.4
+pathspec==1.0.3
 pluggy==1.6.0
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
@@ -43,6 +47,7 @@ PyYAML==6.0.2
 rich==13.9.4
 rich-toolkit==0.13.2
 rsa==4.9
+ruff==0.14.11
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
