--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.38
 sqlmodel==0.0.22
 starlette==0.45.3
+structlog==25.5.0
 tomli==2.4.0
 typer==0.15.1
 typing_extensions==4.12.2
