--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
 TIME_ZONE=-4
+ENABLE_ACCESS_AUDIT=True
+ENABLE_DATA_AUDIT=True
+AUDIT_EXCLUDED_PATHS='["/docs", "/redoc", "/openapi.json", "GET:/health"]'
