--- a/.gitignore
+++ b/.gitignore
@@ -188,6 +188,6 @@ pip-selfcheck.json
 # End of https://www.toptal.com/developers/gitignore/api/python,venv
 
 ### Google ###
-GEMINI.md
+#GEMINI.md
 
 ### End of .gitignore ###
